--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div id="footer">
   <div class="container text-center">
     <div class="col-md-4">
-      <h3>Address</h3>
+      <h3>Dirección</h3>
       <div class="contact-item">
         <p>en el escritorio de al lado </p>
         <p>o en la sala de reuniones, Milan, IT 20122</p>
