--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
   <![endif]-->
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+  <audio controls onloadstart="this.volume=0.25" autoplay>
+    <source src="mariaci.mp3" type="audio/mpeg" style="position: fixed">
+    Your browser does not support the audio element.
+  </audio>
 <header id="header">
   <div class="intro">
     <div class="overlay">
@@ -59,16 +63,16 @@
       </div>
     </div>
     <div class="col-md-4">
-      <h3>Opening Hours</h3>
+      <h3>Horario de apertura</h3>
       <div class="contact-item">
         <p>Mon-Fri: 09:00 AM - 07:00 PM</p>
       </div>
     </div>
     <div class="col-md-4">
-      <h3>Contact Info</h3>
+      <h3>Para encontrarme</h3>
       <div class="contact-item">
-        <p>Phone: +39 02 24961</p>
-        <p>Email: comune.di.sesto@gmail.com</p>
+        <p>Mobil: +39 02 24961</p>
+        <p>correo electrónico: comune.di.sesto@gmail.com</p>
       </div>
     </div>
   </div>
