--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <![endif]-->
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-  <audio controls onloadstart="this.volume=0.25" autoplay>
-    <source src="mariaci.mp3" type="audio/mpeg" style="position: fixed">
+  <audio controls onloadstart="this.volume=0.25" autoplay style="position: absolute;">
+    <source src="mariaci.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 <header id="header">
