--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <![endif]-->
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-  <audio controls onloadstart="this.volume=0.25" autoplay style="position: absolute;">
+  <audio controls onloadstart="this.volume=0.25;" style="position: absolute;">
     <source src="mariaci.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
