--- a/x1xD/nolito.html
+++ b/x1xD/nolito.html
@@ -8,20 +8,20 @@
 
   <!-- Favicons
       ================================================== -->
-  <link rel="shortcut icon" type="image/x-icon" href="sombrero.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="../sombrero.ico" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" type="text/css"  href="../css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="../fonts/font-awesome/css/font-awesome.css">
 
   <!-- Stylesheet
       ================================================== -->
-  <link rel="stylesheet" type="text/css"  href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/nivo-lightbox.css">
-  <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.css">
+  <link rel="stylesheet" type="text/css"  href="../css/style.css">
+  <link rel="stylesheet" type="text/css" href="../css/nivo-lightbox/nivo-lightbox.css">
+  <link rel="stylesheet" type="text/css" href="../css/nivo-lightbox/default.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
@@ -35,7 +35,7 @@
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
   <audio controls onloadstart="this.volume=0.25;" style="position: absolute;">
-    <source src="mariaci.mp3" type="audio/mpeg">
+    <source src="../mariaci.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 <header id="header">
@@ -77,6 +77,6 @@
     </div>
   </div>
 </div>
-<script type="text/javascript" src="js/nolito.js"></script>
+<script type="text/javascript" src="../js/nolito.js"></script>
 </body>
 </html>
